# Multi-Tool-AI-Agent-for-Bangladesh

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/download/: download_hugging_face_dataset.ipynb
data/sql/: resturants.db
dataset_save_db/: bangladeshi_hospitals_db_connection.ipynb  bangladeshi_resturant_db_connection.ipynb  institution_information_db_connection.ipynb
tools/: hospitals_tool.py  institution_tool.py  restaurants_tool.py  web_search_tool.py
utils/: llm.py  sql_executor.py
